# trs

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.es.md  README.md  tars_task.md
.github/workflows/: ci.yml  release.yml
docs/: TASK_TODO.md
docs/TASK_COMPLETED/: 2603.md  README.md
npm/: install.js  package.json
scripts/: benchmark.sh  docker-smoke.sh
src/: classifier.rs  classifier_exec.rs  classifier_transfer.rs  cli.rs  commands.rs  commands_parse.rs  config.rs  discover.rs  doctor.rs  doctor_tests.rs  formatter.rs  help.rs  help_tests.rs  init.rs  main.rs  main_tests.rs  main_tests_precedence.rs  process.rs  process_helpers.rs  process_tests.rs  reducer.rs  rewrite.rs  router.rs  schema.rs  tracker.rs
src/formatter/: agent.rs  agent_schema.rs  compact.rs  compact_schema.rs  compact_schema_git.rs  compact_schema_output.rs  csv.rs  csv_schema.rs  helpers.rs  json.rs  json_schema.rs  mod.rs  raw.rs  tests.rs  tsv.rs  (+1 more)
tests/: cli.rs  cli_compact_summary.rs  cli_doctor.rs  cli_error_detection.rs  cli_flags_exec.rs  cli_git_diff_fixtures.rs  cli_git_status_fixtures.rs  cli_grep.rs  cli_help.rs  cli_input_bytes.rs  cli_json_formats.rs  cli_json_search_clean.rs  cli_json_txt2md.rs  cli_ls.rs  cli_ls_advanced.rs  cli_malformed.rs  cli_raw_stdin.rs  cli_replace.rs  cli_routing.rs  cli_search.rs  cli_search_filters.rs  cli_stats_find.rs  cli_system_json.rs  cli_tail_compact.rs  cli_tail_streaming.rs  cli_test_duration.rs  cli_test_failures.rs  cli_test_parsers.rs  cli_trim.rs  fixtures.rs  test_clean.rs  test_clean_basic.rs  test_clean_edge_cases.rs  test_clean_formats.rs  test_command_routing.rs  test_command_routing_core.rs  test_command_routing_help.rs  test_conversion.rs  test_conversion_html2md.rs  test_conversion_txt2md_basic.rs  (+44 more)
(+266 files in other folders)
