[package]
name = "tars-cli"
version = "0.1.0"
edition = "2024"
description = "TARS CLI tool"
license = "MIT"

[[bin]]
name = "trs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
