[package]
name = "tars-cli"
version = "0.1.0"
edition = "2021"
description = "Transform noisy terminal output into compact, structured signal for AI agents"
license = "MIT"
repository = "https://github.com/dPeluChe/trs"
homepage = "https://github.com/dPeluChe/trs"
keywords = ["cli", "terminal", "ai", "token-reduction", "parser"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "trs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grep = "0.3"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
regex = "1"
htmd = "0.5"
ureq = { version = "3", features = ["rustls-webpki-roots"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
